# rag

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  variables.env
.project/: spec.yaml
deploy/compose/: .env  accuracy_profile.env  docker-compose-ingestor-server.yaml  docker-compose-nemo-guardrails.yaml  docker-compose-rag-server.yaml  nims.yaml  perf_profile.env  vectordb.yaml
deploy/config/: rag-metrics-dashboard.json
deploy/helm/mig-slicing/: values-mig.yaml
deploy/helm/rag-server/: Chart.yaml  endpoints.md  values.yaml
deploy/helm/rag-server/charts/frontend/: Chart.yaml  values.yaml
deploy/helm/rag-server/charts/ingestor-server/: Chart.yaml  values.yaml
deploy/helm/rag-server/templates/: configmap.yaml  deployment.yaml  secrets.yaml  service.yaml
deploy/workbench/: README.md  compose.yaml  quickstart.ipynb
docs/: accuracy_perf.md  audio_ingestion.md  custom-metadata.md  enable-nemotron-thinking.md  hybrid_search.md  image_captioning.md  mig-deployment.md  migration_guide.md  milvus-configuration.md  milvus-schema.md  multi-collection-retrieval.md  nemo-guardrails.md  nemoretriever-parse-extraction.md  nv-ingest-standalone.md  observability.md  prompt-customization.md  python-client.md  query_rewriter.md  quickstart.md  self-reflection.md  summarization.md  support-matrix.md  text_only_ingest.md  troubleshooting.md  vlm.md
docs/api_reference/: openapi_schema_ingestor_server.json  openapi_schema_rag_server.json
frontend/: Dockerfile  package-lock.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/collection/: route.ts
frontend/src/app/api/collections/: route.ts
frontend/src/app/config/: api.ts
frontend/src/app/context/: AppContext.tsx  SettingsContext.tsx
frontend/src/types/: chat.ts  collections.ts  documents.ts
notebooks/: .env_library  README.md  ingestion_api_usage.ipynb  launchable.ipynb  rag_library_usage.ipynb  retriever_api_usage.ipynb
src/: chains.py  utils.py
src/ingestor_server/: main.py
src/nvidia_rag/: __init__.py
src/nvidia_rag/ingestor_server/: Dockerfile  main.py  nvingest.py  server.py  task_handler.py
src/nvidia_rag/rag_server/: Dockerfile  health.py  main.py  prompt.yaml  reflection.py  response_generator.py  server.py  tracing.py  validation.py  vlm.py
src/nvidia_rag/utils/: common.py  configuration.py  configuration_wizard.py  embedding.py  llm.py  minio_operator.py  reranker.py  vectorstore.py
(+18 files in other folders)
